# euler

./: .gitignore  .pylintrc  001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.py  027.py  028.py  029.py  030.py  031.py  032.py  033.py  034.py  035.py  036.py  037.py  038.py  (+97 more)
.github/workflows/: coverage.yml
Euler/: Sieve.py  __init__.py  continued_fraction.py  divisor.py  formula.py  modulo.py  palindrome.py  prime.py  roman.py  special_subset_sum.py  text.py  triangle.py
tests/: __init__.py  test_continued_fraction.py  test_divisor.py  test_formula.py  test_modulo.py  test_palindrome.py  test_prime.py  test_roman.py  test_special_subset_sum.py  test_text.py  test_triangle.py  text.txt
