[project]
name = "Euler"
version = "0.0.4"
description = "Modules implementing algorithms for number theory and other mathematics, with potential use for Project Euler or Advent of Code"
readme = "README.md"
authors = [{name = "Leon Helwerda", email = "l.s.helwerda@liacs.leidenuniv.nl"}]
license = {text = "MIT"}
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy==2.2.6",
    "sortedcontainers==2.4.0",
    "typing-extensions==4.15.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = [
    "number theory", "mathematics", "algorithms", "formulas", "primality",
    "divisors", "palindromes", "roman", "triangles"
]

[dependency-groups]
test = [
    "coverage[toml]==7.10.1",
]
analysis = [
    "mypy==1.17.1",
    "lxml==6.0.0",
    "pylint==3.3.7",
    "sortedcontainers-stubs==2.4.3",
    "basedpyright==1.31.5",
    "ruff==0.13.2",
]
release = [
    "build==1.2.2post1",
    "setuptools==80.9.0",
    "wheel==0.45.1",
]

[project.urls]
"Source Code" = "https://github.com/lhelwerd/euler"
"Issues" = "https://github.com/lhelwerd/euler/issues"
"Pull Requests" = "https://github.com/lhelwerd/euler/pulls"
"CI: GitHub Actions" = "https://github.com/lhelwerd/euler/actions"
"CI: Coveralls" = "https://coveralls.io/github/lhelwerd/euler?branch=main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["Euler"]

[tool.setuptools.package-data]
"Euler" = ["py.typed"]

[tool.coverage.run]
branch = true

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "recommended"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportUninitializedInstanceVariable = "none" # Often in setUp
reportUnknownLambdaType = "none"

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations
    "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "FIX", # flake8-fixme
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-pie
    "PYI", # flake8-pyi
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "FLY", # flynt
    "C90", # mccabe
    "N", # pep8-naming
    "PERF", # Perflint
    "E", "W", # pycodestyle
    "D1", # pydocstyle undocumented
    "F", # Pyflakes
    "UP", # pyupgrade
    "FURB", # refurb
    "RUF", # ruff
    "TRY", # tryceratops
]
ignore = [
    # Module name is uppercase
    "N999",
    # Any type covered by basedpyright reportExplicitAny
    "ANN401",
    # Undocumented special methods, including `__init__`
    "D105", "D107",
    # Allow verbose `Decimal` constructor parameter
    "FURB157",
    # Long exception messages
    "TRY003",
]
